@@ -1,3 +1,12 @@
+2009-08-12  Christopher Faulet  <c.faulet@meetic-corp.com>
+
+	* src/gen_trans.erl, src/multiparser.erl: Documentation updated.
+
+	* src/lambda_expr.erl: Rules about the keyword 'lambda' are
+	relaxed. Now, we only reserved the function lambda/1.
+	* src/recfun.erl: Rules about the keyword 'callee' are
+	relaxed. Now, we only reserved the functions callee/N.
+
 2009-07-31  Christopher Faulet  <c.faulet@meetic-corp.com>
 
 	* gen_trans (start/3): Now, when we catch an error, we use the
